--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
    "description": "Add own RSS Feeds to admin notifications.",
    "homepage": "https://github.com/ikonoshirt/CustomAdminNotifications",
    "require": {
-      "magento-hackathon/magento-composer-installer": "dev-master"
+      "magento-hackathon/magento-composer-installer": "*"
    }
 }
 
